Details
-
Bug
-
Status: Closed
-
P1: Critical
-
Resolution: Fixed
-
6.5.0 FF
-
None
-
-
0088b09e7 (dev), 023b89817 (6.5), f8aac9601 (6.4)
Description
1. Run the multi-screen example and a client (I used the shadereffects example from Qt Quick).
2. Grab the window title with the mouse to drag it
This crashes the compositor for me with the following stack trace:
#0 0x00007ffff5d8e127 in QMetaObject::cast (this=0x7fffd47e8a28 <QWaylandQuickShellSurfaceItem::staticMetaObject>, obj=0x2) at src/corelib/kernel/qmetaobject.cpp:388 #1 0x00007fffd45279cd in QMetaObject::cast (this=0x7fffd47e8a28 <QWaylandQuickShellSurfaceItem::staticMetaObject>, obj=0x2) at /home/eskil/dev/qt5-dev/base/include/QtCore/../../src/corelib/kernel/qobjectdefs.h:233 #2 0x00007fffd46afd6c in qobject_cast<QWaylandQuickShellSurfaceItem*> (object=0x2) at /home/eskil/dev/qt5-dev/base/include/QtCore/../../src/corelib/kernel/qobject.h:442 #3 0x00007fffd46af6ed in findSurfaceItemFromMoveItem (moveItem=0x2) at src/compositor/extensions/qwaylandquickshellsurfaceitem.cpp:294 #4 0x00007fffd46ae934 in QWaylandQuickShellSurfaceItemPrivate::raise()::$_1::operator()(QQuickItem*) const (this=0x7fffffffc278, item=0x2) at src/compositor/extensions/qwaylandquickshellsurfaceitem.cpp:318 #5 0x00007fffd46ae8b7 in QWaylandQuickShellSurfaceItemPrivate::raise (this=0x5555558dff70) at src/compositor/extensions/qwaylandquickshellsurfaceitem.cpp:322 #6 0x00007fffd469f496 in QWaylandQuickItem::raise (this=0x7fffe4008b70) at src/compositor/compositor_api/qwaylandquickitem.cpp:1601 #7 0x00007fffd46b6c37 in QtWayland::XdgToplevelIntegration::handleActivatedChanged (this=0x5555558b11a0) at src/compositor/extensions/qwaylandxdgshellintegration.cpp:249 #8 0x00007fffd46b9ac4 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (QtWayland::XdgToplevelIntegration::*)()>::call(void (QtWayland::XdgToplevelIntegration::*)(), QtWayland::XdgToplevelIntegration*, void**) ( f=(void (QtWayland::XdgToplevelIntegration::*)(QtWayland::XdgToplevelIntegration * const)) 0x7fffd46b6c00 <QtWayland::XdgToplevelIntegration::handleActivatedChanged()>, o=0x5555558b11a0, arg=0x7fffffffc620) at /home/eskil/dev/qt5-dev/base/include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:135 #9 0x00007fffd46b9a2d in QtPrivate::FunctionPointer<void (QtWayland::XdgToplevelIntegration::*)()>::call<QtPrivate::List<>, void>(void (QtWayland::XdgToplevelIntegration::*)(), QtWayland::XdgToplevelIntegration*, void**) ( f=(void (QtWayland::XdgToplevelIntegration::*)(QtWayland::XdgToplevelIntegration * const)) 0x7fffd46b6c00 <QtWayland::XdgToplevelIntegration::handleActivatedChanged()>, o=0x5555558b11a0, arg=0x7fffffffc620) at /home/eskil/dev/qt5-dev/base/include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:172 #10 0x00007fffd46b9972 in QtPrivate::QSlotObject<void (QtWayland::XdgToplevelIntegration::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x5555558cb990, r=0x5555558b11a0, a=0x7fffffffc620, ret=0x0) at /home/eskil/dev/qt5-dev/base/include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:383 #11 0x00007ffff5d9870e in QtPrivate::QSlotObjectBase::call (this=0x5555558cb990, r=0x5555558b11a0, a=0x7fffffffc620) at include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:363 #12 0x00007ffff5e0f863 in doActivate<false> (sender=0x5555558637b0, signal_index=14, argv=0x7fffffffc620) at src/corelib/kernel/qobject.cpp:3972 #13 0x00007ffff5e07819 in QMetaObject::activate (sender=0x5555558637b0, m=0x7fffd47e1578 <QWaylandXdgToplevel::staticMetaObject>, local_signal_index=11, argv=0x0) at src/corelib/kernel/qobject.cpp:4032 #14 0x00007fffd45c4bb5 in QWaylandXdgToplevel::activatedChanged (this=0x5555558637b0) at src/compositor/WaylandCompositor_autogen/include/moc_qwaylandxdgshell.cpp:1545 #15 0x00007fffd45c3469 in QWaylandXdgToplevelPrivate::handleAckConfigure (this=0x7fffe400a780, serial=4) at src/compositor/extensions/qwaylandxdgshell.cpp:1305 #16 0x00007fffd45c3194 in QWaylandXdgSurfacePrivate::xdg_surface_ack_configure (this=0x5555558bb160, resource=0x5555558a4d00, serial=4) at src/compositor/extensions/qwaylandxdgshell.cpp:392 #17 0x00007fffd4666929 in QtWaylandServer::xdg_surface::handle_ack_configure (client=0x555555897190, resource=0x5555558d9fc0, serial=4) at src/compositor/qwayland-server-xdg-shell.cpp:888 #18 0x00007ffff0a4ae2e in ?? () from /lib/x86_64-linux-gnu/libffi.so.8 #19 0x00007ffff0a47493 in ?? () from /lib/x86_64-linux-gnu/libffi.so.8 #20 0x00007ffff0a6a260 in ?? () from /lib/x86_64-linux-gnu/libwayland-server.so.0 #21 0x00007ffff0a6e474 in ?? () from /lib/x86_64-linux-gnu/libwayland-server.so.0 #22 0x00007ffff0a6ceea in wl_event_loop_dispatch () from /lib/x86_64-linux-gnu/libwayland-server.so.0 #23 0x00007fffd452dbeb in QWaylandCompositor::processWaylandEvents (this=0x5555556c3330) at src/compositor/compositor_api/qwaylandcompositor.cpp:835 #24 0x00007fffd452e56a in QWaylandCompositor::qt_static_metacall (_o=0x5555556c3330, _c=QMetaObject::InvokeMetaMethod, _id=13, _a=0x7fffffffd350) at src/compositor/WaylandCompositor_autogen/include/moc_qwaylandcompositor.cpp:541 #25 0x00007ffff5e0f953 in doActivate<false> (sender=0x555555882ce0, signal_index=3, argv=0x7fffffffd350) at src/corelib/kernel/qobject.cpp:3984 #26 0x00007ffff5e07819 in QMetaObject::activate (sender=0x555555882ce0, m=0x7ffff6505170 <QSocketNotifier::staticMetaObject>, local_signal_index=0, argv=0x7fffffffd350) at src/corelib/kernel/qobject.cpp:4032 #27 0x00007ffff5e3216f in QSocketNotifier::activated (this=0x555555882ce0, _t1=..., _t2=QSocketNotifier::Read, _t3=...) at src/corelib/Core_autogen/include/moc_qsocketnotifier.cpp:230 #28 0x00007ffff5e3205b in QSocketNotifier::event (this=0x555555882ce0, e=0x7fffffffd608) at src/corelib/kernel/qsocketnotifier.cpp:326 #29 0x00007ffff5d74549 in QCoreApplicationPrivate::notify_helper (receiver=0x555555882ce0, event=0x7fffffffd608) at src/corelib/kernel/qcoreapplication.cpp:1197 #30 0x00007ffff5d74020 in doNotify (receiver=0x555555882ce0, event=0x7fffffffd608) at src/corelib/kernel/qcoreapplication.cpp:1126 #31 0x00007ffff5d7412a in QCoreApplication::notify (this=0x7fffffffd9e0, receiver=0x555555882ce0, event=0x7fffffffd608) at src/corelib/kernel/qcoreapplication.cpp:1109 #32 0x00007ffff74c3764 in QGuiApplication::notify (this=0x7fffffffd9e0, object=0x555555882ce0, event=0x7fffffffd608) at src/gui/kernel/qguiapplication.cpp:1928 #33 0x00007ffff5d73f32 in QCoreApplication::notifyInternal2 (receiver=0x555555882ce0, event=0x7fffffffd608) at src/corelib/kernel/qcoreapplication.cpp:1030 #34 0x00007ffff5d74b33 in QCoreApplication::sendEvent (receiver=0x555555882ce0, event=0x7fffffffd608) at src/corelib/kernel/qcoreapplication.cpp:1448 #35 0x00007ffff61eb6c6 in socketNotifierSourceDispatch (source=0x5555555f19e0) at src/corelib/kernel/qeventdispatcher_glib.cpp:73 #36 0x00007ffff552fd1b in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 #37 0x00007ffff55846f8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 #38 0x00007ffff552d3c3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0 #39 0x00007ffff61ea7bf in QEventDispatcherGlib::processEvents (this=0x5555555f0c80, flags=...) at src/corelib/kernel/qeventdispatcher_glib.cpp:393 #40 0x00007ffff209253a in QXcbGlibEventDispatcher::processEvents (this=0x5555555f0c80, flags=...) at src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:96 #41 0x00007ffff5d88696 in QEventLoop::processEvents (this=0x7fffffffd910, flags=...) at src/corelib/kernel/qeventloop.cpp:100 #42 0x00007ffff5d888c7 in QEventLoop::exec (this=0x7fffffffd910, flags=...) at src/corelib/kernel/qeventloop.cpp:182 #43 0x00007ffff5d74851 in QCoreApplication::exec () at src/corelib/kernel/qcoreapplication.cpp:1351 #44 0x00007ffff74c3536 in QGuiApplication::exec () at src/gui/kernel/qguiapplication.cpp:1860 #45 0x0000555555555321 in main (argc=1, argv=0x7fffffffdb18) at /home/eskil/dev/qt5-dev/wayland/examples/wayland/multi-screen/main.cpp:21