compositor: Fix crash when raising shell surface item

This was introduced by d89c8920f3b82dd2098971b5a66c4b9c75da5af0.

The raise() function would search for a suitable surface, but
failing to find one, it would search past the end of the
childItems list and cause memory corruption.

[ChangeLog][QtWaylandCompositor] Fixed an issue where the compositor
would sometimes crash if a shell surface item was brought to front.

Fixes: QTBUG-109051
Change-Id: I2249f0881b90fc05b5f0292cd35c6524db4663c5
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>
(cherry picked from commit 0088b09e79da01534a703f69dbccbd721e7594d8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>